<resources>
    <string name="app_name">MajorPull</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or">Or</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="sign_in_with_google_plus">Sign In with Google Plus</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account?</string>
    <string name="reset_your_password">RESET YOUR PASSWORD</string>
    <string name="submit">SUBMIT</string>
    <string name="sign_up">SIGN UP</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_sign_in">Already have an Account?</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="you_should_receive_your_code_in_less_than_2_minutes">You should receive your code in less than 2 minutes.</string>
    <string name="verify">VERIFY</string>
    <string name="resend_otp"><u>RESEND OTP</u></string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="product_detail_form">PRODUCT DETAIL FORM</string>
    <string name="material">Material</string>
    <string name="enter_type">Enter Type</string>
    <string name="jhonson_williams">Jhonson Williams</string>
    <string name="your_trips">Your Trips</string>
    <string name="my_profile">My Profile</string>
    <string name="scheduled_trips">Scheduled Trips</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="weight">Weight</string>
    <string name="enter_in_kg">Enter in Kg</string>
    <string name="date">Date</string>
    <string name="dd_mm_yyyy">DD-MM-YY</string>
    <string name="time">Time</string>
    <string name="specific_instructions_any">Specific Instructions (Any)</string>
    <string name="enter_message">Enter Message</string>
    <string name="dump_trucks">Dump Trucks</string>
    <string name="pick_up_date_amp_time"><![CDATA[Pickup Date & Time]]></string>
    <string name="_27_feb_2018_10_50_pm">27 Feb 2018, 10:56 PM</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="pickuplocation_time">Pickup Location &amp; Time</string>
    <string name="michael_colyar">Michael Colyar</string>
    <string name="_9859_e_yates_chicago_il_60617_312_555_5555">9859 e Yates, Chicago il, 60617, +01-312-555-5555</string>
    <string name="drop_location">Drop Location</string>
    <string name="drop_location_n_time">Drop Location &amp; Time </string>
    <string name="demario_colyar">Demario Colyar</string>
    <string name="_6732_s_wintergreen_rd_dallas_tx_75221_773_555_5555">6732 s wintergreen rd, Dallas tx, 75221, +01-773-555-5555</string>
    <string name="aquarium_glass">Aquarium glass</string>
    <string name="estimated_price">ESTIMATED PRICE</string>
    <string name="_9_12">$9-12</string>
    <string name="approximate_travel_time_30_0_min">Approximate Travel Time: 30 min</string>
    <string name="book_my_ride">BOOK MY RIDE</string>
    <string name="this_is_just_an_estimate_actual_fare_may_very_slightly_based_on_traffic_or_discounts">This is just an estimate. Actual fare may vary slightly based on traffic or discounts</string>
    <string name="ride_has_been_confirmed">RIDE HAS BEEN CONFIRMED</string>
    <string name="your_request_has_been_sent_to_driver">Your request has been sent to driver</string>
    <string name="_5_8_kg">5.8 Kg</string>
    <string name="make_payment">MAKE PAYMENT</string>
    <string name="choose_option_and_make_your_trip_payment">Choose option and make your trip payment</string>
    <string name="cash">Cash</string>
    <string name="debit_credit_card">Debit/Credit Card</string>
    <string name="sign_upp">Sign Up</string>
    <string name="sign_inn">Sign In</string>
    <string name="up">UP</string>
    <string name="sign">SIGN</string>
    <string name="schedule_ride">SCHEDULE RIDE</string>
    <string name="title_activity_maps">Map</string>
    <!--<string name="signup_string"> <![CDATA[  Connect With <b>Sign Up</b> ]]></font></string>-->


    <string name="api_key">AIzaSyDnyNcQYgI69H8H_bzZQo09RST7DN4sTbQ</string>
    <string name="justin">Justin</string>
    <string name="driver">Driver</string>
    <string name="uk_cs_12345">UK-CS-12345</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="wednesday_28_feb_2018">Wednesday, 28 Feb 2018</string>
    <string name="scheduled">SCHEDULED</string>
    <string name="booking_id">Booking ID :</string>
    <string name="_1204568">1204568</string>
    <string name="little_telaviv_hostel_mo_usa">Little Telaviv Hostel, MO USA</string>
    <string name="toyota">Toyota</string>
    <string name="etios_uk_cs_12345">Etios, UK-CS-12345</string>
    <string name="billig_details">Billing details</string>
    <string name="base_fare">Base Fare</string>
    <string name="_10">$10</string>
    <string name="distance">Distance</string>
    <string name="_2">$2</string>
    <string name="_8">$8</string>
    <string name="_5">$5</string>
    <string name="_12">$12</string>
    <string name="discounts">Discounts</string>
    <string name="total_bill">Total Bill</string>
    <string name="jhonson">Jhonson</string>
    <string name="williams">Williams</string>
    <string name="jhonson_william_gmail_com">jhonson_william@gmail.com</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="usa">USA</string>
    <string name="email">Email</string>
    <string name="_01_123_456_789">+01-123-456-789</string>
    <string name="notification">Notification</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Please enter new password.</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="_04">(04)</string>
    <string name="title_str">Donec Virus lobortis diam sed fringills.</string>
    <string name="description">Sed eget tempus quam. Integer purus </string>
    <string name="rate_review"><![CDATA[RATE & REVIEW]]></string>
    <string name="give_rating_and_review_to_driver">Give rating and review to driver</string>
    <string name="justin_upper">JUSTIN</string>
    <string name="give_your_review">Give Your Review</string>
    <string name="etios">Etios</string>
    <string name="prb_default_symbolic_string">$</string>
    <string name="your_payment_has_sucessfully_completed">Your payment has been\n successfully completed</string>
    <string name="yourtrip_suceess">Your trip has been\n successfully completed</string>
    <string name="rate_amp_review_driver"><![CDATA[RATE & REVIEW DRIVER]]></string>
    <string name="total_bill_amount_12">Total Bill Amount: $12</string>
    <string name="cancel_ride">CANCEL RIDE</string>
    <string name="call_driver">CALL DRIVER</string>
    <string name="thank_you_for_booking">Thank you for Booking</string>
    <string name="we_will_get_back_to_you_in_30_min_n_with_driver_details">We will get back to you in 30 min\nwith driver details</string>
    <string name="title">Title</string>
    <string name="ok">OK</string>
    <string name="home">Home</string>
    <string name="sprinter_van">Sprinter Van</string>
    <string name="transporting_cars">Transporting Cars</string>
    <string name="haul_boats">Haul boats</string>
    <string name="fill_form_details_to_transport_your_product">Fill form details to transport your product.</string>
    <string name="contact_number">Enter Contact</string>
    <string name="mobilevalidation">Please enter your phone number.</string>
    <string name="contact_maxlength">Phone number should be minimum 7 characters.</string>
    <string name="invalid_email">Please enter valid email.</string>
    <string name="enter_firstname">Please enter your first name.</string>
    <string name="enter_last_name">Please enter your last name.</string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_password">Please enter your password.</string>
    <string name="passblank">Password is not entered</string>
    <string name="otp_number_error">Please enter OTP number.</string>
    <string name="invalid_pass">Invalid Password.</string>
    <string name="data_sucess">Successfully Registered</string>
    <string name="password_not_match">Password doesn\'t match.</string>
    <string name="enter_email">Please enter your email.</string>
    <string name="check_internet_connection">Make sure your device is connected to the internet.</string>


    <!--Facebook Integration key-->
    <string name="fb_key_id">189428845195300</string>
    <string name="g_plush_key_id"></string>
    <string name="pass_mini_length">Password should be minimum 8 characters.</string>
    <string name="mobileno_mini_length_error">Phone number should be minimum 7 characters.</string>
    <string name="mobileno_maxlength_error">Phone number should be minimum 15 characters.</string>
    <string name="enter_currectnewpass">Enter Currect New Password</string>
    <string name="pasword_change">Password Change Successfully update</string>
    <string name="enter_contact">Enter Contact Number</string>
    <string name="profile_update">Profile Update Successfully</string>
    <string name="select_country">Please select your country</string>
    <string name="_91">+91</string>
    <string name="enter_valid_otp">Enter Valid OTP</string>

    <string name="country_list">Country List</string>
    <string name="enter_cofirmpassword">Please enter confirm password.</string>
    <string name="select_countrycode_error">Please select your country code.</string>
    <string name="choose_option">Choose Option</string>
    <string name="cemera">Cemera</string>
    <string name="count_code_error">Please select your country code</string>
    <string name="otp">OTP</string>
    <string name="cancel">Cancel</string>
</resources>
