<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_your_trip"
            android:icon="@drawable/your_trip"
            android:title="@string/your_trips" />
        <item
            android:id="@+id/nav_scheduledttrips"
            android:icon="@drawable/schedule_icon"
            android:title="@string/scheduled_trips" />
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/myprofile"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>


</menu>
